--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         flow well.”
       </h1>
       <h4>
-        This web page is intented to motivate you to finish Odin Project and
-        keep learning.
+        My favorite motivational quotes.
       </h4>
       <div class="btn">Sign up</div>
     </div>
